--- a/board/css/style.css
+++ b/board/css/style.css
@@ -273,3 +273,76 @@ margin: 0 auto;
     font-size: 1.4rem;
     text-align: center;
 }
+
+/* 768~1000ㅔㅌ */
+@media all and (max-width: 1000px) {
+    .wrap {
+        width: 100vw;
+    }
+    .board_wrap {
+        width: 100vw;
+    }
+}
+
+
+/* 0~767px */
+
+@media all and (max-width: 767px) {
+    .wrap {
+        width: 95vw;
+    }
+}
+
+.board_list th:nth-of-type(1,
+.board_list td:nth-of-type(1) {
+    display: none;
+}
+.board_list th:nth-of-type(3,
+.board_list td:nth-of-type(3) {
+    display: none;
+}
+.board_list th:nth-of-type(4,
+.board_list td:nth-of-type(4) {
+    display: none;
+}
+
+.board_wrap {
+    width: 100vw;
+}
+
+
+.board_write .title dt {
+    width: 70px;
+}
+
+.board_write .info dt {
+    width: 70px;
+    margin-bottom: 10px;
+}
+
+.board_write .title input[type="text"] {
+    width: 100%;
+}
+
+.board_write .info input[type="text"],
+.board_write .info input[type="password"] {
+    width: 80%;
+}
+
+.board_view .info dl {
+    padding: 0 10px;
+}
+
+.board_view .info dt,
+.board_view .info dd {
+    font-size: 1rem;
+    display: inline-block;
+}
+
+.board_view .info dl::before {
+    display: none;
+}
+.board_view .info dl:nth-of-type(1), 
+.board_view .info dl:nth-of-type(3) {
+    display: none;
+} 
